// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Media Asset Page A11y I can see the skip to content link 1`] = `"إذهب الى المحتوى"`;

exports[`Canonical Media Asset Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Media Asset Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Media Asset Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "5",
  },
  {
    "x1": "[urn:bbc:topcat:curie:asset:22d6ef3c-8f6e-11e5-b707-b2517c19ac20]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-arabic]",
  },
  {
    "x4": "[ar]",
  },
  {
    "x7": "[article-media-asset]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[شركة%20شارب%20للإلكترونيات%20تحث%20موظفيها%20على%20شراء%20منتجاتها%20-%20BBC%20News%20عربي]",
  },
  {
    "x11": "[2015-11-20T10:09:33.000Z]",
  },
  {
    "x12": "[2015-11-20T10:09:33.000Z]",
  },
]
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, عربي",
  "url": "/arabic",
}
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 2`] = `
{
  "text": "لماذا يمكنك الاعتماد على أخبار بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-49283069",
}
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 3`] = `
{
  "text": "شروط الاستخدام",
  "url": "https://www.bbc.com/arabic/institutional-37731351",
}
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 4`] = `
{
  "text": "عن بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-37731352",
}
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 5`] = `
{
  "text": "سياسة الخصوصية",
  "url": "https://www.bbc.com/arabic/institutional-37731353",
}
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 6`] = `
{
  "text": "ملفات الارتباط Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 7`] = `
{
  "text": "اتصل بـ بي بي سي",
  "url": "https://www.bbc.co.uk/arabic/send/u50853203",
}
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 8`] = `
{
  "text": "بي بي سي نيوز عربي في لغات أخرى",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Media Asset Page Footer Anchors should match text and url 9`] = `
{
  "text": "سياستنا بخصوص الروابط الخارجية.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Media Asset Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/arabic"`;

exports[`Canonical Media Asset Page Footer Paragraphs should match text 1`] = `"© 2025 بي بي سي. بي بي سي ليست مسؤولة عن محتوى المواقع الخارجية. سياستنا بخصوص الروابط الخارجية."`;

exports[`Canonical Media Asset Page Header I can see the branding 1`] = `"BBC News, عربي"`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 1`] = `
{
  "text": "رئيسية",
  "url": "/arabic",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 2`] = `
{
  "text": "شاهد البث المباشر",
  "url": "/arabic/media-49522519",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 3`] = `
{
  "text": "أخبار",
  "url": "/arabic/topics/cv2xyrnr8dnt",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 4`] = `
{
  "text": "اقتصاد",
  "url": "/arabic/topics/cqywj97d487t",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 5`] = `
{
  "text": "صحة وعلوم",
  "url": "/arabic/topics/clmj3d7282gt",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 6`] = `
{
  "text": "رياضة",
  "url": "/arabic/topics/cyx5kw7g1j2t",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 7`] = `
{
  "text": "فيديو",
  "url": "/arabic/topics/cz9mm6r1q5et",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 8`] = `
{
  "text": "تحقيقات",
  "url": "/arabic/topics/c51nnzdeg9zt",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 9`] = `
{
  "text": "بودكاست",
  "url": "/arabic/topics/cljddp5lw0dt",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 10`] = `
{
  "text": "برامجنا",
  "url": "/arabic/topics/crgyknwdlwnt",
}
`;

exports[`Canonical Media Asset Page Main heading should match text 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها"`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/arabic/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Media Asset Page SEO Canonical link 1`] = `"http://localhost:7081/arabic/worldnews/2015/11/151120_t_arabic_av"`;

exports[`Canonical Media Asset Page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical Media Asset Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Media Asset Page SEO Heading level 1 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها"`;

exports[`Canonical Media Asset Page SEO Lang attribute 1`] = `"ar"`;

exports[`Canonical Media Asset Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
          "width": 1024,
        },
        "name": "BBC News عربي",
        "noBylinesPolicy": "https://www.bbc.com/arabic/institutional-49283069#authorexpertise",
      },
      "dateModified": "2015-11-20T10:09:33.000Z",
      "datePublished": "2015-11-20T10:09:33.000Z",
      "headline": "شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_arabic/worldservice/test/assets/images/2014/09/22/140922130059_144x81.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ar",
        "name": "Arabic",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/arabic/worldnews/2015/11/151120_t_arabic_av",
        "@type": "WebPage",
        "name": "شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
          "width": 1024,
        },
        "name": "BBC News عربي",
        "publishingPrinciples": "https://www.bbc.com/arabic/institutional-49283069",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_arabic/worldservice/test/assets/images/2014/09/22/140922130059_144x81.jpg",
      "url": "http://localhost:7081/arabic/worldnews/2015/11/151120_t_arabic_av",
    },
  ],
}
`;

exports[`Canonical Media Asset Page SEO OG description 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها"`;

exports[`Canonical Media Asset Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_arabic/worldservice/test/assets/images/2014/09/22/140922130059_144x81.jpg"`;

exports[`Canonical Media Asset Page SEO OG image alt 1`] = `"BBC News عربي"`;

exports[`Canonical Media Asset Page SEO OG locale 1`] = `"ar"`;

exports[`Canonical Media Asset Page SEO OG site name 1`] = `"BBC News عربي"`;

exports[`Canonical Media Asset Page SEO OG title 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها - BBC News عربي"`;

exports[`Canonical Media Asset Page SEO OG type 1`] = `"article"`;

exports[`Canonical Media Asset Page SEO OG url 1`] = `"http://localhost:7081/arabic/worldnews/2015/11/151120_t_arabic_av"`;

exports[`Canonical Media Asset Page SEO Page title 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها - BBC News عربي"`;

exports[`Canonical Media Asset Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Media Asset Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Media Asset Page SEO Twitter creator 1`] = `"@BBCArabic"`;

exports[`Canonical Media Asset Page SEO Twitter description 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها"`;

exports[`Canonical Media Asset Page SEO Twitter image alt 1`] = `"BBC News عربي"`;

exports[`Canonical Media Asset Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_arabic/worldservice/test/assets/images/2014/09/22/140922130059_144x81.jpg"`;

exports[`Canonical Media Asset Page SEO Twitter site 1`] = `"@BBCArabic"`;

exports[`Canonical Media Asset Page SEO Twitter title 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها - BBC News عربي"`;

exports[`Canonical Media Asset Page Timestamp should match text and date 1`] = `
{
  "date": "2015-11-20",
  "text": "20 نوفمبر/ تشرين الثاني 2015",
}
`;
